# whatsapp_bot_mvp

./: .env  agents.yaml  credentials.json  crew.py  main.py  pyproject.toml  quick_start.py  tasks.yaml
src/whatsapp_bot/: crew.py  main.py
src/whatsapp_bot/config/: agents.yaml  tasks.yaml
whatsapp_bot/: README.md
whatsapp_bot/src/whatsapp_bot/: crew.py  main.py
whatsapp_bot/src/whatsapp_bot/config/: agents.yaml  tasks.yaml
