[project]
name = "whatsapp_bot"
version = "0.1.0"
description = "whatsapp_bot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
whatsapp_bot = "whatsapp_bot.main:run"
run_crew = "whatsapp_bot.main:run"
train = "whatsapp_bot.main:train"
replay = "whatsapp_bot.main:replay"
test = "whatsapp_bot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
